# GTKlash

./: README.md  meson.build  org.gnome.Gtklash.json  run.sh
data/: clashrule-dark.xml  clashrule-light.xml  meson.build  org.gnome.Gtklash.appdata.xml.in  org.gnome.Gtklash.desktop.in  org.gnome.Gtklash.gschema.xml
data/gtksourceview-4/: clashrule.lang
po/: POTFILES  meson.build
src/: app.vala  clash.vala  config.vala  gtklash.gresource.xml  main.vala  meson.build  utils.vala  variables.vala  window.ui  window.vala
src/config/: default.vala  file.vala  serializing.vala
src/content/: overview.ui  overview.vala  servers.ui  servers.vala
src/contents/: overview.ui  overview.vala  servers.vala
src/model/: config.vala  proxy.vala  proxy_group.vala
src/model/proxy/: http.vala  shadowsocks.vala  socks5.vala  vmess.vala
src/res/: app.css  default.clashrule  overview.ui  proxies.ui  proxy_edit_dialog.ui  proxy_item.ui  window.ui
src/res/ui/: overview.ui  progress_dialog.ui  proxies.ui  proxy_edit_dialog.ui  proxy_item.ui  rules.ui  settings.ui  window.ui
src/ui/: app.css  common.vala  content.vala  overview.ui  overview.vala  progress_dialog.vala  proxies.vala  proxy_edit_dialog.vala  proxy_item.vala  rules.vala  servers.ui  servers.vala  settings.vala  vector_icon.vala  window.ui  window.vala
subprojects/libclash/: .gitignore  clash.go  go.mod  go.sum  meson.build  mmdb.go
